--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Marcio Eustaquio</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="Users\MDC\Documents\marcio\Nova pasta\css">
 </head>
 <body>
     <header>  
