--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Marcio Eustaquio</title>
-    <link rel="stylesheet" href="Users\MDC\Documents\marcio\Nova pasta\css">
+    <link rel="stylesheet" href="C:\Users\MDC\Documents\marcio\Nova pasta\css\estilos.css">
 </head>
 <body>
     <header>  
@@ -17,6 +17,5 @@
             <h1 class="site-title">Marcio Eustaquio</h1>
             <h2 class="site-subtitle">Marcio.Frontend developer</h2>
             </header>
-          
 </body>
 </html>
